# RESONA

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: pretrain_100m.yaml  pretrain_300m.yaml  pretrain_v2_5090.yaml  sanity.yaml
docs/: FORESIGN_DESIGN.md  FORESIGN_HANDOFF.md
resona/: __init__.py  trainer.py
resona/data/: __init__.py  augment.py  unified_dataset.py
resona/models/: __init__.py  contrastive_head.py  graph.py  heads.py  msm_head.py  stgcn.py  transformer.py
scripts/: pretrain.py  verify_data.py
slurm/: chain.sh  flash_attn_build.sh  pretrain.sh  pretrain_100m_5090.sh  pretrain_v2_5090.sh  sanity.sh
