[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resona"
version = "0.0.1"
description = "RESONA: skeleton-based multilingual sign language foundation model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dongjun Kim" }]

dependencies = [
    "torch>=2.5",
    "numpy>=1.24",
    "h5py>=3.10",
    "einops>=0.8",
    "tqdm",
    "pyyaml",
    "omegaconf>=2.3",
    "wandb",
    "tensorboard",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["resona*"]

[tool.ruff]
line-length = 100
target-version = "py310"
